Closed Bug 1001237 Opened 12 years ago Closed 12 years ago

"ASSERTION: InitialOverflowProperty must be set first"

Categories

(Core :: Layout, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: jruderman, Assigned: kip)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(4 files, 1 obsolete file)

Attached file testcase
###!!! ASSERTION: InitialOverflowProperty must be set first.: 'hasInitialOverflowPropertyApplied', file RestyleTracker.h This assertion was added in bug 984226.
Attached file stack
Could you have a look at what's going on here?
Flags: needinfo?(kgilbert)
Assignee: nobody → kgilbert
Flags: needinfo?(kgilbert)
Have reproduced and am investigating
Attached patch V1 fix for Bug 1001237 (obsolete) — Splinter Review
Proposed fix -- nsStyleDisplay::CalcDifference will no longer return nsChangeHint_UpdatePostTransformOverflow when a transform is added.
Attachment #8413889 - Flags: review?(dbaron)
Attachment #8413909 - Flags: review?(dbaron)
Comment on attachment 8413889 [details] [diff] [review] V1 fix for Bug 1001237 This will leave us with nothing updating the overflow area in the other case. I suspect it would work to use the other overflow-updating hint instead. This also has a null-dereference, since the condition you reused only makes sense when the previous conditon in the if is checked first.
Attachment #8413889 - Flags: review?(dbaron) → review-
Comment on attachment 8413909 [details] [diff] [review] V1 Crashtest for Bug 1001237,r=dbaron r=dbaron if this asserts without the patch and doesn't with it
Attachment #8413909 - Flags: review?(dbaron) → review+
Updated to address review in Comment 7
Attachment #8413889 - Attachment is obsolete: true
Attachment #8414014 - Flags: review?(dbaron)
Comment on attachment 8414014 [details] [diff] [review] V2 fix for Bug 1001237,r=dbaron r=dbaron
Attachment #8414014 - Flags: review?(dbaron) → review+
Attachment #8414014 - Attachment description: V2 fix for Bug 1001237 → V2 fix for Bug 1001237,r=dbaron
Attachment #8413909 - Attachment description: V1 Crashtest for Bug 1001237 → V1 Crashtest for Bug 1001237,r=dbaron
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: